feat: finish crud for both author and book